--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.4.6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^5.0.0-rc.2",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -28,10 +29,14 @@
     "@swimlane/ngx-datatable": "^9.3.0",
     "@swimlane/ngx-dnd": "^3.0.0",
     "angular2-color-picker": "^1.3.1",
+    "angular2-csv": "^0.2.5",
+    "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
     "devextreme": "^17.2.3",
     "devextreme-angular": "^17.2.3",
     "dragula": "^3.7.2",
+    "hammerjs": "^2.0.8",
+    "materialize-css": "^0.100.2",
     "ng-dynamic": "^3.0.2",
     "ng-dynamic-component": "^1.1.0",
     "ng2-dnd": "^5.0.1",
