--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ng2-modal": "0.0.25",
     "ngx-bootstrap": "^1.9.3",
     "ngx-color-picker": "^4.0.3",
+    "ngx-datetime-picker": "^2.0.0",
     "ngx-owl-carousel": "^2.0.1",
     "primeng": "^4.2.1",
     "rxjs": "^5.4.3",
