--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "@swimlane/ngx-datatable": "^9.3.0",
-    "@swimlane/ngx-dnd": "^3.0.0",
+    "@swimlane/ngx-dnd": "^3.1.0",
+    "angular-gridster2": "^3.18.2",
     "angular2-color-picker": "^1.3.1",
     "angular2-csv": "^0.2.5",
+    "angular2-grid": "^2.1.0",
     "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
     "devextreme": "^17.2.3",
     "devextreme-angular": "^17.2.3",
     "dragula": "^3.7.2",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "materialize-css": "^0.100.2",
+    "ng-contenteditable": "^1.0.5",
     "ng-dynamic": "^3.0.2",
     "ng-dynamic-component": "^1.1.0",
     "ng2-dnd": "^5.0.1",
@@ -45,9 +49,10 @@
     "ngx-bootstrap": "^1.9.3",
     "ngx-color-picker": "^4.0.3",
     "ngx-datetime-picker": "^2.0.0",
+    "ngx-dnd": "^1.1.1",
     "ngx-owl-carousel": "^2.0.1",
     "primeng": "^4.2.1",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.6",
     "table-dragger": "^1.0.2",
     "typescript": "^2.6.1",
     "zone.js": "^0.8.14"
@@ -58,6 +63,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
